--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -102,7 +102,7 @@ button.navbar-toggler {
     }
 }
 
-.loggedin {
+.logged-in {
     .navbar {
         .container-fluid {
             justify-content: flex-end;
