--- a/public/assets_setup/css/style.css
+++ b/public/assets_setup/css/style.css
@@ -1,3 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scrollbar-color: var(--bs-primary) var(--bs-white);
+    scrollbar-width: thin;
+}
+
+body {
+    min-height: 100vh;
+    background-color: var(--bs-white);
+}
 @media screen and (max-width: 768px) {
     .btn {
         display: block;
@@ -30,14 +42,9 @@ input {
     width: 750px;
 }
 
-.container-progress .section-setup {
-    background: var(--bs-primary);
-    color: white;
-}
-
-.container-progress .section-setup h1 {
-    font-size: 1.5rem;
+.container-progress .section-setup img {
     padding: 30px 0;
+    height: 65px;
 }
 
 input::placeholder {
@@ -210,4 +217,18 @@ li a {
     border: 2px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
+}
+
+/* for scroll bar - WebKit based browsers (e.g. Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--bs-white);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--bs-primary);
+    border-radius: 6px;
 }
