--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 /* Bootstrap */
 @import 'bootstrap/scss/bootstrap';
 
+/* Datepicker */
+@import 'bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
+
 /* DataTables */
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
