--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -5,7 +5,16 @@ nav.navbar {
     padding-top: 0;
     padding-bottom: 0;
 }
-
+.nav-item.active .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0.3em solid;
+    border-left: 0.3em solid transparent;
+}
 .nav {
     .nav-link {
         color: var(--bs-black);
