--- a/public/assets_setup/css/style.css
+++ b/public/assets_setup/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .icon-ok {
-    color: var(--bs-success);
+    color: var(--bs-primary);
 }
 
 .icon-remove {
@@ -58,7 +58,7 @@ input::placeholder {
 
 .progressbar li {
     list-style-type: none;
-    width: 20%;
+    width: 16%;
     float: left;
     font-size: 12px;
     position: relative;
@@ -110,8 +110,8 @@ li a {
 }
 
 .progressbar li.active:before {
-    border-color: var(--bs-success);
-    background: var(--bs-success);
+    border-color: var(--bs-primary);
+    background: var(--bs-primary);
     color: white;
 }
 
